@@ -1,5 +1,14 @@
 2008-01-11  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>
 
+	* tag V00-17-11
+	* converter feature: release python conversion
+	* gui feature: integrate python conversion in dialog
+	* gui bugfix: no more exception when removong a path which is
+	assingned to a stream
+	* gui bugfix: reset search strings when config is reset
+
+2008-01-11  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>
+
 	* tag V00-17-10
 	* bugfix to confdb.data.InputTagParameter: if an InputTag had a
 	process but no instance, the second colon would be omitted.
